Fix compile warnings

--- a/ReaperPluginControlSurfaceGeneric/reaper_plugin_control_surface_generic.vcxproj
+++ b/ReaperPluginControlSurfaceGeneric/reaper_plugin_control_surface_generic.vcxproj
@@ -44,10 +44,12 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
     <IntDir>..\$(Platform)\$(Configuration)\</IntDir>
+    <OutDir>$(SolutionDir)$(Platform)\$(Configuration)\Plugins\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
     <IntDir>..\$(Platform)\$(Configuration)\</IntDir>
+    <OutDir>$(SolutionDir)$(Platform)\$(Configuration)\Plugins\</OutDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
@@ -84,12 +86,12 @@
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <LinkDLL>true</LinkDLL>
       <SubSystem>Console</SubSystem>
-      <OutputFile>$(TargetDir)Plugins\reaper_plugin_control_surface_generic.dll</OutputFile>
+      <OutputFile>$(TargetPath)</OutputFile>
       <ImportLibrary>$(IntDir)reaper_plugin_control_surface_generic.lib</ImportLibrary>
       <AdditionalDependencies>odbc32.lib;odbccp32.lib;winmm.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>copy /Y $(TargetDir)Plugins\$(TargetFileName) "C:\Program Files\REAPER (x64)\Plugins"</Command>
+      <Command>copy /Y $(TargetPath) "C:\Program Files\REAPER (x64)\Plugins"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -128,12 +130,12 @@
       <LinkDLL>true</LinkDLL>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Console</SubSystem>
-      <OutputFile>$(TargetDir)Plugins\reaper_plugin_control_surface_generic.dll</OutputFile>
+      <OutputFile>$(TargetPath)</OutputFile>
       <ImportLibrary>$(IntDir)reaper_plugin_control_surface_generic.lib</ImportLibrary>
       <AdditionalDependencies>odbc32.lib;odbccp32.lib;winmm.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>copy /Y $(TargetDir)Plugins\$(TargetFileName) "C:\Program Files\REAPER (x64)\Plugins"</Command>
+      <Command>copy /Y $(TargetPath) "C:\Program Files\REAPER (x64)\Plugins"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
